Restore "ImmutableMap#of" usage with comment on iteration order guarantee